--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,10 +1,9 @@
 /** @format */
 
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital@1&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital@1&display=swap'); */
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'PT Serif', serif;
 }
